# OpenCL-CTS-Framework

./: .gitignore  LICENSE  README.md
02-buildsystem/: CMakeLists.txt  README.md  build-win-config.bat  build.bat  build.sh  clean.bat  clean.sh
02-buildsystem/bootstrap/: BootstrapCMake.cmake  BootstrapCommon.cmake  BootstrapNinja.cmake
02-buildsystem/bootstrap/cmake/: CMakeLists.txt
02-buildsystem/bootstrap/ninja/: CMakeLists.txt
02-buildsystem/cmake/: BuildOpenCLToolset.cmake  Clean.cmake  Common.cmake  GenPaths.cmake
02-buildsystem/repos/: HeadersFinalize.cmake  ICDFinalize.cmake  LibclcxxFinalize.cmake  ReposPublic.cmake  SPIRFinalize.cmake
03-conformance-checks/: CMakeLists.txt  README.md  runtests.sh
03-conformance-checks/cmake/: Colours.cmake  Common.cmake  CompileWrapper.cmake  CompilerChecks.cmake  ConformanceTestUtils.cmake  GetPaths.cmake  RunTest.cmake  Summary.cmake  WindowsConfig.cmake
03-conformance-checks/configs/: android-arm64-mali-opencl-1.1.cmake  compiletime-device-opencl-2.2.cmake  compiletime-host-opencl-2.1.cmake  default.cmake  runtime-native-opencl-1.0.cmake  runtime-native-opencl-1.1.cmake  runtime-native-opencl-1.2.cmake  runtime-native-opencl-2.0.cmake  runtime-native-opencl-2.1.cmake  runtime-native-opencl-2.2.cmake
03-conformance-checks/host-toolchain/native/: MSVC_v140_clang.cmake  ReferenceClang.cmake  SystemDefault.cmake
03-conformance-checks/opencl-toolchain/opencl-2.2/khronos/: toolchain.cmake
03-conformance-checks/tests/opencl-1.1/runtime/: CMakeLists.txt
03-conformance-checks/tests/opencl-1.1/runtime/demo-tests/: CMakeLists.txt  sect-4_1-clGetPlatformIDs-2.c
03-conformance-checks/tests/opencl-2.0/runtime/: CMakeLists.txt
03-conformance-checks/tests/opencl-2.1/compiletime-host/demo-tests/: CMakeLists.txt  appendix-C.1-1.c  appendix-C.2-1.cxx  appendix-C.5-1.cxx
03-conformance-checks/tests/opencl-2.1/runtime/: CMakeLists.txt
03-conformance-checks/tests/opencl-2.1/runtime/demo-tests/: CMakeLists.txt  sect-4_1-clGetPlatformIDs-1.c  sect-4_1-clGetPlatformIDs-3.c
03-conformance-checks/tests/opencl-2.2/compiletime-device/: CMakeLists.txt
03-conformance-checks/tests/opencl-2.2/compiletime-device/demo-tests/: demo-tests-oclcxx.hxx  sect-3_10_1_1.cl  sect-3_10_4_1.cl  sect-3_5_2_1.cl  sect-3_5_2_1.hxx
03-conformance-checks/tests/opencl-2.2/runtime/: CMakeLists.txt
